@startuml service

skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 60
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam wrapWidth 350

skinparam package {
    BackgroundColor White
    BorderColor #2C3E50
}
skinparam class {
    BackgroundColor #E8F6F3
    BorderColor #16A085
    ArrowColor #2C3E50
}
skinparam class<<External>> {
    BackgroundColor #F2F4F4
    BorderColor #95A5A6
    FontColor #95A5A6
}

title Service Layer (Frontend) - Class Diagram

package "Infrastructure" {
    class HttpClient <<External>> {}
    class ObjectMapper <<External>> {}
    class Logger <<External>> {}
    class HttpRequest <<External>> {}
    class HttpResponse <<External>> {}
}

package "dto" {
    package "request" {
        class LoginRequestDTO <<External>> {}
        class CreateIssueRequestDTO <<External>> {}
        class UpdateIssueRequestDTO <<External>> {}
        class CreateProgettoRequestDTO <<External>> {}
        class CreateTeamRequestDTO <<External>> {}
        class RegisterRequestDTO <<External>> {}
        class UpdateUtenteRequestDTO <<External>> {}
    }
    package "response" {
        class AuthResponseDTO <<External>> {}
        class UtenteResponseDTO <<External>> {}
        class IssueResponseDTO <<External>> {}
        class ProgettoResponseDTO <<External>> {}
        class TeamResponseDTO <<External>> {}
    }
}

package "frontend.service" {

    class AuthService {
        - {static} LOGGER : Logger
        - {static} API_URL : String
        - jwtToken : String
        --
        + AuthService(httpClient: HttpClient, objectMapper: ObjectMapper)
        + login(email: String, password: String) : boolean
        + refreshLocalUser(newUser: UtenteResponseDTO) : void
        + isAuthenticated() : boolean
        + isNotAuthenticated() : boolean
        + logout() : void
        + getJwtToken() : String
        + getCurrentUser() : UtenteResponseDTO
    }

    class IssueService {
        - {static} logger : Logger
        - {static} API_URL : String
        - {static} JWT_BEARER : String
        - {static} JWT_AUTH : String
        + {static} PATCH : String
        + {static} PUT : String
        --
        + IssueService(httpClient: HttpClient, objectMapper: ObjectMapper, authService: AuthService)
        + getAllIssues() : List<IssueResponseDTO>
        + getIssuesAssignedTo(userId: Long) : List<IssueResponseDTO>
        + getIssuesCreatedBy(userId: Long) : List<IssueResponseDTO>
        + createIssue(requestDTO: CreateIssueRequestDTO) : boolean
        + updateIssue(issueId: Long, requestDTO: UpdateIssueRequestDTO) : boolean
        + resolveIssue(issueId: Long) : boolean
        + archiveIssue(issueId: Long) : boolean
        + assignIssue(issueId: Long, userIds: List<Long>) : boolean
        - executeListGetRequest(url: String, operationDescription: String) : List<IssueResponseDTO>
        - executeWriteRequest(url: String, method: String, bodyPayload: Object, operationDescription: String) : boolean
        - handleException(e: Exception, context: String) : void
    }

    class ProjectsService {
        - {static} logger : Logger
        - {static} API_URL : String
        - {static} JWT_BEARER : String
        - {static} JWT_AUTH : String
        --
        + ProjectsService(httpClient: HttpClient, objectMapper: ObjectMapper, authService: AuthService)
        + getProgettiAccessibili() : List<ProgettoResponseDTO>
        + createProgetto(requestDTO: CreateProgettoRequestDTO) : boolean
        + attivaProgetto(idProgetto: Long) : boolean
        + concludiProgetto(idProgetto: Long) : boolean
    }

    class TeamsService {
        - {static} LOGGER : Logger
        - {static} API_URL : String
        - {static} CONTENT_TYPE : String
        - {static} APPLICATION_JSON : String
        - {static} AUTHORIZATION : String
        - {static} BEARER : String
        --
        + TeamsService(httpClient: HttpClient, objectMapper: ObjectMapper, authService: AuthService)
        + getTeamsManagedByAdmin() : List<TeamResponseDTO>
        + getTeamsNotMembers(teamId: Long) : List<UtenteResponseDTO>
        + getTeamMembers(teamId: Long) : List<UtenteResponseDTO>
        + create(requestDTO: CreateTeamRequestDTO) : boolean
        + aggiungiMembri(teamId: Long, userIds: List<Long>) : boolean
        + rimuoviMembri(teamId: Long, userIds: List<Long>) : boolean
        - executeMemberOperation(teamId: Long, userIds: List<Long>, operation: String) : boolean
        - executeListRequest(request: HttpRequest, typeRef: TypeReference<List<T>>) : List<T>
        - buildGetRequest(url: String) : HttpRequest
        - buildPostRequest(body: String) : HttpRequest
        - isSuccess(code: int) : boolean
        - logError(context: String, response: HttpResponse<String>) : void
        - logException(context: String, e: Exception) : void
    }

    class UtenteService {
        - {static} LOGGER : Logger
        - {static} API_BASE_URL : String
        --
        + UtenteService(httpClient: HttpClient, objectMapper: ObjectMapper, authService: AuthService)
        + updateMe(requestDTO: UpdateUtenteRequestDTO) : Optional<UtenteResponseDTO>
        + register(requestDTO: RegisterRequestDTO) : boolean
    }
}

AuthService --> HttpClient
AuthService --> ObjectMapper
AuthService --> Logger
AuthService --> UtenteResponseDTO

IssueService --> HttpClient
IssueService --> ObjectMapper
IssueService --> AuthService
IssueService --> Logger

ProjectsService --> HttpClient
ProjectsService --> ObjectMapper
ProjectsService --> AuthService
ProjectsService --> Logger

TeamsService --> HttpClient
TeamsService --> ObjectMapper
TeamsService --> AuthService
TeamsService --> Logger

UtenteService --> HttpClient
UtenteService --> ObjectMapper
UtenteService --> AuthService
UtenteService --> Logger

AuthService ..> LoginRequestDTO
AuthService ..> AuthResponseDTO

IssueService ..> IssueResponseDTO
IssueService ..> CreateIssueRequestDTO
IssueService ..> UpdateIssueRequestDTO
IssueService ..> HttpRequest
IssueService ..> HttpResponse

ProjectsService ..> ProgettoResponseDTO
ProjectsService ..> CreateProgettoRequestDTO
ProjectsService ..> HttpRequest
ProjectsService ..> HttpResponse

TeamsService ..> TeamResponseDTO
TeamsService ..> UtenteResponseDTO
TeamsService ..> CreateTeamRequestDTO
TeamsService ..> HttpRequest
TeamsService ..> HttpResponse

UtenteService ..> UpdateUtenteRequestDTO
UtenteService ..> RegisterRequestDTO
UtenteService ..> HttpRequest
UtenteService ..> HttpResponse

@enduml